# time-limited-nft

./: Beaker.toml  Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  cw721_time_limited.wasm
contracts/cw721-time-limited/: Cargo.toml
contracts/cw721-time-limited/examples/: schema.rs
contracts/cw721-time-limited/schema/: cw721-time-limited.json
contracts/cw721-time-limited/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json
contracts/cw721-time-limited/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
scripts/: 0_contracts_setup.js  1_mint_nft.js  2_burn_nft.js  README.md  package-lock.json  package.json
scripts/config/: chain.js
