[workspace]
members = ['contracts/*']
resolver = "2"

[workspace.package]
authors = ["hoanm"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aura-nw/time-limited-nft"
rust-version = "1.72.1"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.0
"""

[workspace.dependencies]
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.8"
cosmwasm-storage = "1.1.8"
cw-multi-test = "0.17.0"
cw-storage-plus = "1.0.0"
cw-utils = "1.0.0"
cw2 = "1.0.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
thiserror = { version = "1.0.37" }
schemars = "0.8.11"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
cw-ownable = "0.5.1"

[workspace.dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }
cosmwasm-storage = { version = "1.1.8" }
cw-multi-test = "0.17.0"

[profile.release.package.cw721-time-limited]
codegen-units = 1
incremental = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
